--- a/camera.html
+++ b/camera.html
@@ -229,9 +229,12 @@
     <use xlink:href="#SVGID_1_"  overflow="visible" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   </g>
 </g>
-
-
 </svg>
+
+      <div id="imageSlider-container">
+        <img id="imageSliderImg" src="img/2-2.png" alt="sheep">
+      </div>
+
     </div>
 
       <div id="timeline-container" class="col-md-2">
