--- a/camera.html
+++ b/camera.html
@@ -215,7 +215,8 @@
 </svg>
 
       <div id="imageSlider-container">
-        <img id="imageSliderImg" src="img/2-2.png" alt="sheep">
+          <div> <img id="imageSliderImg1" src="img/2-2.png" alt="sheep"> </div>
+          <div><img id="imageSliderImg2" src="img/1-2.png" alt="monkey"></div>
       </div>
 
     </div>
