--- a/camera.html
+++ b/camera.html
@@ -208,8 +208,12 @@
 </g>
 
 
-
 <!-- 
+  <g id="imageSlider-1">
+  <path fill="none" stroke="#000000" stroke-width="1.4" stroke-miterlimit="10" d="M270.2,193H86.8c-5.5,0-10,4.5-10,10v146c0,5.5,4.5,10,10,10h189.5
+    c5.5,0,10-4.5,10-10V203c0-5.5-4.5-10-10-10H270.2z"/>
+</g>
+
 <g id="imageSlider-1">
   <path fill="none" stroke="#000000" stroke-width="1.4" stroke-miterlimit="10" d="M270.2,193H86.8c-5.5,0-10,4.5-10,10v146c0,5.5,4.5,10,10,10h189.5
     c5.5,0,10-4.5,10-10V203c0-5.5-4.5-10-10-10H270.2z"/>
