--- a/camera-2/index.html
+++ b/camera-2/index.html
@@ -225,15 +225,15 @@
     <div id="imgBox">
          <div id="imgContainer">
             <div class="img1"><a href="img/open.png" data-lightbox="imgSlider"> <img src="img/open.png"></a></div>
-            <div class="img"><a href="img/2012-1.png" data-lightbox="imgSlider"> <img src="img/2012-1.png"></a></div>
+            <div class="img img2012"><a href="img/2012-1.png" data-lightbox="imgSlider"> <img src="img/2012-1.png"></a></div>
             <div class="img"><a href="img/2012-2.png" data-lightbox="imgSlider" > <img src="img/2012-2.png"></a></div>
             <div class="img"><a href="img/2012-3.png" data-lightbox="imgSlider"> <img src="img/2012-3.png"></a></div>
             <div class="img"><a href="img/2012-4.png" data-lightbox="imgSlider"> <img src="img/2012-4.png"></a></div>
-            <div class="img"><a href="img/2013-1.png" data-lightbox="imgSlider"> <img src="img/2013-1.png"></a></div>
+            <div class="img img2013"><a href="img/2013-1.png" data-lightbox="imgSlider"> <img src="img/2013-1.png"></a></div>
             <div class="img"><a href="img/2013-2.png" data-lightbox="imgSlider"> <img src="img/2013-2.png"></a></div>
             <div class="img"><a href="img/2013-3.png" data-lightbox="imgSlider"> <img src="img/2013-3.png"></a></div>
             <div class="img"><a href="img/2013-4.png" data-lightbox="imgSlider"> <img src="img/2013-4.png"></a></div>
-            <div class="img"><a href="img/2014-1.png" data-lightbox="imgSlider"> <img src="img/2014-1.png"></a></div>
+            <div class="img img2014"><a href="img/2014-1.png" data-lightbox="imgSlider"> <img src="img/2014-1.png"></a></div>
             <div class="img"><a href="img/2014-2.png" data-lightbox="imgSlider"> <img src="img/2014-2.png"></a></div>
             <div class="img"><a href="img/2014-3.png" data-lightbox="imgSlider"> <img src="img/2014-3.png"></a></div>
             <div class="img"><a href="img/2014-4.png" data-lightbox="imgSlider"> <img src="img/2014-4.png"></a></div>
