--- a/camera-2/index.html
+++ b/camera-2/index.html
@@ -248,28 +248,32 @@
               <div class="timelineSvg">
                             <svg id="timeline" height="600px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 100 616" enable-background="new 0 0 100 616" xml:space="preserve">
-                <g id="2015">
+                <g id="dot2015">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,606c0,3.8-3.1,6.9-6.9,6.9s-6.9-3.1-6.9-6.9
                     s3.1-6.9,6.9-6.9S55.9,602.2,55.9,606z"/>
                 </g>
                 <g id="2014to2015">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M49,416v183"/>
                 </g>
-                <g id="2014">
+                <g id="dot2014">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,408.7c0,3.8-3.1,6.9-6.9,6.9
                     s-6.9-3.1-6.9-6.9s3.1-6.9,6.9-6.9S55.9,404.9,55.9,408.7z"/>
                 </g>
                 <g id="2013to2014">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M49,218v184"/>
                 </g>
-                <g id="2013">
+                <g id="dot2013">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,211.3c0,3.8-3.1,6.9-6.9,6.9
                     s-6.9-3.1-6.9-6.9s3.1-6.9,6.9-6.9S55.9,207.5,55.9,211.3z"/>
                 </g>
                 <g id="2012to2013">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M49,21v183"/>
                 </g>
-                <g id="2012">
+                <g id="dot2012">
+                  <path fill="#000000" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,14c0,3.8-3.1,6.9-6.9,6.9s-6.9-3.1-6.9-6.9
+                    s3.1-6.9,6.9-6.9S55.9,10.2,55.9,14z"/>
+                </g>
+                <g id="dot2012-1">
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,14c0,3.8-3.1,6.9-6.9,6.9s-6.9-3.1-6.9-6.9
                     s3.1-6.9,6.9-6.9S55.9,10.2,55.9,14z"/>
                 </g>
@@ -293,10 +297,8 @@
     </div>
 
   </div>
-  <div class="row" id="section2">
-       
-    </div>
-  </div>
+
+ 
   
 </div>
 
