fix 2012dot color

--- a/camera-2/index.html
+++ b/camera-2/index.html
@@ -270,7 +270,7 @@
                   <path fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M49,21v183"/>
                 </g>
                 <g id="dot2012">
-                  <path fill="#000000" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,14c0,3.8-3.1,6.9-6.9,6.9s-6.9-3.1-6.9-6.9
+                  <path fill= "white" stroke="#000000" stroke-width="2" stroke-miterlimit="10" d="M55.9,14c0,3.8-3.1,6.9-6.9,6.9s-6.9-3.1-6.9-6.9
                     s3.1-6.9,6.9-6.9S55.9,10.2,55.9,14z"/>
                 </g>
                 <g id="dot2012-1">
