change center container position

--- a/camera-2/index.html
+++ b/camera-2/index.html
@@ -17,8 +17,8 @@
 <div class="container-fluid">
   <div class="row" id="section1">
 
-    <div class="col-md-8 col-md-offset-2" id="centerContainer">
-      <div id="cameraContainer" class="col-md-10">
+    <div id="centerContainer">
+      <div id="cameraContainer">
         <svg id="camera" width="700px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 471.3 414.7" enable-background="new 0 0 471.3 414.7" xml:space="preserve">
 <g id="baseCase">
@@ -327,7 +327,7 @@
 
     </div>
     
-      <div id="timelineContainer" class="col-md-2">
+      <div id="timelineContainer">
               <div class="timelineSvg">
                             <svg id="timeline" height="600px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                    viewBox="0 0 100 616" enable-background="new 0 0 100 616" xml:space="preserve">
