--- a/week6/index.html
+++ b/week6/index.html
@@ -52,7 +52,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   
                     <li>
-                        <a href="post.html">Dropbox Case Study</a>
+                        <a href="#">Dropbox Case Study</a>
                     </li>
                    
                 </ul>
