--- a/camera/index.html
+++ b/camera/index.html
@@ -308,7 +308,11 @@
            </div>
            <div id="cube">
                 <div class="default flipToTop">Hover and scroll</div>
-                <div class="active">Click on the image</div>
+                <div class="active">
+                  <span>Click on the image</span>
+                  <span>Caption 1</span>
+                  <span>Caption 2</span>
+                </div>
             </div>
 
             
