--- a/camera/index.html
+++ b/camera/index.html
@@ -311,7 +311,7 @@
                 <div class="active">
                   <span>Click on the image</span>
                   <span>Caption 1</span>
-                  <span>Caption 2</span>
+                  <span>Click on the image</span>
                 </div>
             </div>
 
