update wave border

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -228,8 +228,20 @@
       </section><!-- skills -->
       
       <section id="portfolio">
-        
-      </section>
+        <div class="containter portfolio-container">
+          <div class="row portfolio-title">
+            <div class="title col-md-3 col-md-offset-1">
+              Portfolio
+            </div><!-- /col -->
+          </div><!-- /portfolio-title -->
+          <div class="row portfolio-categories-container">
+             <div class="portfolio-categories col-md-2 col-md-offset-1"></div>
+             <div class="portfolio-categories col-md-2"></div>
+             <div class="portfolio-categories col-md-2"></div>
+             <div class="portfolio-categories col-md-2"></div> 
+          </div>
+        </div><!-- /portfolio-container -->
+      </section><!-- /portfolio -->
 
 <!-- <footer>
         <p>&copy; Xinyi Chen 2015</p>
