update design/photography/painting sections

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,7 @@
               <div class="nav-item">Contact</div>
           </div><!-- nav-items -->
     </div><!-- nav-box -->
-    <div id="nav-bg"></div>
+    <div id="nav-bg"></div><!-- /nav-bg -->
 
     <div class="wrapper">
       
