revise home page for mobile view

--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -65,8 +65,8 @@
           </div><!-- snow-mountain -->
 
           <div class="blue-circle-container">
-             <svg id="blue-circle" xml:space="preserve">
-              <circle x="0" y="100" cx="148" cy="148" r="148" class="blue-circle"/>
+             <svg id="blue-circle">
+              <circle x="0" y="0" cx="148" cy="148" r="148" class="blue-circle"/>
              </svg>
           </div><!-- /blue-circle -->
 
@@ -82,7 +82,7 @@
           <div class="rects rects-02">
               <svg x="0px" y="0px"
                  width="70.617px" height="75.725px" viewBox="0 0 70.617 75.725"
-                 xml:space="preserve" id="#rects-02">
+                 xml:space="preserve" id="rects-02">
               <rect x="18.284" y="22.892" class="rect" width="50" height="50"/>
               <rect x="2.284" y="1.892" class="rect" width="27" height="37"/>
               </svg>
