update tablet view

--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -316,10 +316,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3 left-column">
-              <div class="title">
-                <h2 class="pull-right">Web/Graphic Design</h2>
+              <div class="title design-title">
+                <h2>Web/Graphic Design</h2>
               </div>
-              <div class="categories-menu pull-right">
+              <div class="categories-menu">
                 <ul>
                   <li><a href="#photography">Photography</a></li>
                   <li><a href="#videos-cat">Videos</a></li>
@@ -496,9 +496,9 @@
             <div class="col-md-1 col-md-push-8 middle-offset"></div>
             <div class="col-md-3 col-md-push-8 right-column reset-right-column">
               <div class="title">
-                <h2 class="pull-left">Photography</h2>
+                <h2>Photography</h2>
               </div><!-- /title -->
-               <div class="categories-menu pull-left">
+               <div class="categories-menu ">
                 <ul>
                   <li><a href="#design">Web/Graphic Design</a></li>
                   <li><a href="#videos-cat">Videos</a></li>
@@ -599,9 +599,9 @@
           <div class="row">
             <div class="col-md-3 left-column">
               <div class="title videos-title">
-                <h2 class="pull-right">Videos</h2>
+                <h2>Videos</h2>
               </div>
-              <div class="categories-menu pull-right">
+              <div class="categories-menu">
                 <ul>
                   <li><a href="#design">Web/Graphic Design</a></li>
                   <li><a href="#photography">Photography</a></li>
@@ -640,9 +640,9 @@
               <div class="col-md-1 col-md-push-8 middle-offset"></div>
               <div class="col-md-3 col-md-push-8 right-column reset-right-column">
                 <div class="title painting-title">
-                  <h2 class="pull-left">Painting</h2>
+                  <h2>Painting</h2>
                 </div>
-                <div class="categories-menu pull-left">
+                <div class="categories-menu">
                 <ul>
                   <li><a href="#design">Web/Graphic Design</a></li>
                   <li><a href="#photography">Photography</a></li>
@@ -777,7 +777,7 @@
                             <textarea id="message" class="form-control" rows="5" placeholder="What do you want to say to me? :)" required></textarea>
                             
                         </div>
-                        <button type="submit" id="form-submit" class="btn btn-lg pull-right">Submit</button>
+                        <button type="submit" id="form-submit" class="btn btn-lg">Submit</button>
                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                         <div class="clearfix"></div>
                   </form><!-- /contactForm -->
