--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -96,11 +96,47 @@
           <div class="arrow"></div><!-- /arrow -->   
         </div><!-- /container -->
       </section><!-- /home -->
-
+      
+      <!-- /about page -->
       <section id="about">
         <div class="tilt-mountain">
             <img src="img/tilt-mountain.png" alt="">
         </div><!-- /tilt-mountain -->  
+        <div class="floating-rects-container">
+          <div class="f-rects"  id="f-rects-01">
+            <svg x="0px" y="0px"
+                 width="70.617px" height="75.725px" viewBox="0 0 70.617 75.725"
+                 xml:space="preserve">
+              <rect x="18.284" y="22.892" class="rect rect-white" width="50" height="50"/>
+              <rect x="2.284" y="1.892" class="rect rect-white" width="27" height="37"/>
+              </svg>
+          </div>
+          <div class="f-rects"  id="f-rects-02">
+            <svg x="0px" y="0px"
+                   width="87.255px" height="66.176px" viewBox="0 0 87.255 66.176"
+                   xml:space="preserve">
+                  <rect x="2.284" y="1.892" class="rect rect-white" width="50" height="50"/>
+                  <rect x="34.284" y="43.892" class="rect rect-white" width="50" height="20"/>
+                 </svg> 
+          </div>
+          <div class="f-rects" id="f-rects-03">
+            <svg x="0px" y="0px"
+                 width="70.617px" height="75.725px" viewBox="0 0 70.617 75.725"
+                 xml:space="preserve">
+              <rect x="18.284" y="22.892" class="rect rect-white" width="50" height="50"/>
+              <rect x="2.284" y="1.892" class="rect rect-white" width="27" height="37"/>
+              </svg>
+          </div>
+          <div class="f-rects"  id="f-rects-04">
+            <svg x="0px" y="0px"
+                   width="87.255px" height="66.176px" viewBox="0 0 87.255 66.176"
+                   xml:space="preserve">
+                  <rect x="2.284" y="1.892" class="rect rect-white" width="50" height="50"/>
+                  <rect x="34.284" y="43.892" class="rect rect-white" width="50" height="20"/>
+                 </svg> 
+          </div>
+        </div><!-- /floating-rects-container -->
+
         <div class="container intro-container">
           <div class="row">
             <div class="intro col-md-6">
@@ -113,11 +149,7 @@
                 </svg>
               </div><!-- rects-03 -->
               <div class="title intro-title">
-                <div class="flip-front about-title">              
-                </div>
-                <div class="flip-back about-title">
-                  About Me
-                </div>
+                  <h1>About Me</h1>
               </div><!-- /intro-title -->
               <div class="intro-text">
                 Dispatched entreaties boisterous say why stimulated. Certain forbade picture now prevent carried she get see sitting. Up twenty limits as months. Inhabit so perhaps of in to certain. Sex excuse chatty was seemed warmth. Nay add far few immediate sweetness earnestly dejection. 
@@ -250,7 +282,17 @@
         <div class="container">
             <div class="row">
               <div class="title portfolio-title col-md-3">
-                <h1>Portfolio</h1>
+                <div>
+                  <h1>Portfolio</h1>
+                </div>
+                <div class="rects rects-05">
+                  <svg id="rects-05" x="0px" y="0px"
+                   width="70.617px" height="75.725px" viewBox="0 0 70.617 75.725"
+                   xml:space="preserve">
+                    <rect x="18.284" y="22.892" class="rect rect-yellow" width="50" height="50"/>
+                    <rect x="2.284" y="1.892" class="rect rect-yellow" width="27" height="37"/>
+                  </svg>
+                </div><!-- rects-05 -->
               </div><!-- /portfolio-ttile -->
             </div><!-- /row-->
 
@@ -797,6 +839,8 @@
     <script src="js/vendor/jquery-2.1.4.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/vendor/TweenMax.min.js"></script>
+    <script src="js/vendor/CSSPlugin.min.js"></script>
+    <script src="js/vendor/ScrollToPlugin.min.js"></script>
     <script src="js/vendor/ScrollMagic.js"></script>
     <script src="js/vendor/animation.gsap.js"></script>
     <script src="js/vendor/debug.addIndicators.js"></script>
