update mobile support

--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -801,7 +801,8 @@
     <script src="js/vendor/ScrollMagic.js"></script>
     <script src="js/vendor/animation.gsap.js"></script>
     <script src="js/vendor/debug.addIndicators.js"></script>
-
+    <script src="js/vendor/iscroll-probe.js"></script>
+    
     <script src="js/plugins.js"></script>
 
     <script src="js/vendor/imagelightbox.min.js"></script>
