update modals text

--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -25,7 +25,6 @@
         <link rel="stylesheet" href="css/main.css">
          <link rel="stylesheet" href="css/media.css">
         
-
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     	
 </head>
@@ -382,7 +381,7 @@
                 <div class="design-item">
                   <div class="design-info">
                     <button class="md-trigger" data-remodal-target="modal-05">
-                      <h3>Scrolling Camera</h3>
+                      <h3>Personal Website</h3>
                     </button>
                     <p>Web Design</p>
                   </div>
@@ -411,14 +410,14 @@
         </div><!-- /container -->
       </section><!-- /design -->
 
-      <!-- modals -->
+      <!-- modals page-->
       <!-- modal-01 billy elliiot poster -->
       <div class="remodal" data-remodal-id="modal-01">
         <button data-remodal-action="close" class="remodal-close"></button>
         <h1>Billy Elliot Poster</h1>
         <img src="img/full/design-01.jpg" alt="Billy Elliot Poster">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          “Billy Elliot” is always my all-time favorite musical. The concept is to display the symbolic objects of the musical utilizing flat design. Billy is a boxer and a ballet dancer. The musical has a happy and touching ending, just like what the colors of the poster present. 
         </p>
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
@@ -430,8 +429,9 @@
         <h1>Online Dating Infographic</h1>
         <img src="img/full/design-02.jpg" alt="Online Dating Infographic">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          This infographic was created when I took a course about online interpersonal relationships. Nowadays online dating has become the third most popular way for single people to build relationships. It was interesting to find out why people trust online dating and how to succeed in such relationships. 
         </p>
+        <p>“Love is a maze” – it is the concept of the design. According to Mark Knapp’s relationship model, generally people go through the process of initialization, experimentation, intensifying, integration, and bonding to achieve an idea relationship. This process is like walking in a maze: sometimes people get lost; sometimes they find the way. In the infographic, each section is connected with a path of the maze, which is not the shortest path to arrive to the next section. However, they all finally arrive, symbolizing the arrival of each stage in a relationship.</p>
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
       </div><!-- modal-02 -->
@@ -440,49 +440,53 @@
        <div class="remodal" data-remodal-id="modal-03">
         <button data-remodal-action="close" class="remodal-close"></button>
         <h1>Barcelona Street Performer</h1>
-        <img src="img/full/design-03.jpg" alt="Barcelona Street Performer">
+        <img src="img/full/design-03-1.jpg" alt="Barcelona Street Performer">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          In my eyes, Barcelona is a city of creativity, enthusiasm, hospitality and flowers. Red might be the most representative color for her. I met the street performer Juan Gratiniano while I was studying abroad in Barcelona. Under the shadow of the magnificent Barcelona Cathedral, he was playing the harp alone. We have a brief conversation when he ended a song. He was humble and friendly. Afterwards I asked if I could take some portraits for him. Here is what I got: 
         </p>
+        <img src="img/full/design-03-2" alt="Barcelona Street Performer">
+        <img src="img/full/design-03-3" alt="Barcelona Street Performer">
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
       </div><!-- modal-03 -->
 
-      <!-- modal-04 Barcelona Street Performer -->
+      <!-- modal-04 Cover Design -->
        <div class="remodal" data-remodal-id="modal-04">
         <button data-remodal-action="close" class="remodal-close"></button>
         <h1>Cover Design</h1>
         <h3>Front Cover</h3>
-        <img src="img/full/design-04-1.jpg" alt="Cover Design">
+        <img src="img/full/design-04-1.jpg" alt="Cover Design-Front">
         <h3>Back Cover</h3>
-        <img src="img/full/design-04-2.jpg" alt="Cover Design">
+        <img src="img/full/design-04-2.jpg" alt="Cover Design-Back">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          This is the cover design of my portfolio before launching this website. It was inspired by the wanted poster design. Yes, of course, when looking for a job, I want to be wanted by the people who review my portfolio (you are viewing my portfolio, right?). The texts on the background show my interests and things I love. Black and white colors intensify the details of the texture and the graphic. I took the photo of the unpleasant monkey in the Potter Park Zoo. Here it is:
         </p>
+        <img src="img/full/design-04-3" alt="Cover Design-Photo">
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
        </div><!-- modal-04 -->
 
-       <!-- modal-05 Barcelona Street Performer -->
+       <!-- modal-05 Personal Website -->
        <div class="remodal" data-remodal-id="modal-05">
         <button data-remodal-action="close" class="remodal-close"></button>
-        <h1>Scrolling Camera</h1>
-        <img src="img/full/design-05.jpg" alt="Cover Design">
+        <h1>Personal Website</h1>
+        <img src="img/full/design-05.jpg" alt="Personal Website">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          Finally, I launched my second personal website (Hooray)! This is a full-responsive, one-page scrolling, animation-based website. Three geometric shapes - triangles, circles, and rectangles – take the major responsibility of maintaining consistency of the website. I love clean design as well as snow mountains. The image of the peak of the snow mountain could be interpreted as the other form of triangles. The blue circle represents the sky over the mountain, which soon becomes a yellow sun when scrolling down. Those nested rectangles symbolize the comfort zones in my life. In order to reach the peak, stepping out the comfort zones is necessary. However, instead, if you can expand your comfort zones, which means you are open to more challenges and situations, the range of your comfort zones can determine how far you can go in your life. That is what I am striving for.  
         </p>
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
        </div><!-- modal-05 -->
   
-      <!-- modal-06 Barcelona Street Performer -->
+      <!-- modal-06 Notepad -->
        <div class="remodal" data-remodal-id="modal-06">
         <button data-remodal-action="close" class="remodal-close"></button>
         <h1>Notepad</h1>
         <img src="img/full/design-06-1.jpg" alt="Notepad">
+        <h4></h4>
         <img src="img/full/design-06-2.jpg" alt="Notepad">
         <p>
-          Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.
+          “Notepad” is a web app built on Ruby on Rails. The idea is to create an online notebook that is easy for users to catch inspirations during work and daily life. The little icons around the title on the home page highlight the theme of the website. Orange is the color of enthusiasm and creativity, which not only matches the concept of Notepad – idea-catcher, but also the color of the shirt in the background image. Though it is an online notebook, styling the sticky notes on the dashboard page with the real notebook style take away a little bit of the digital feel. 
         </p>
         <br>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
