--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -475,6 +475,11 @@
         <p>
           Finally, I launched my second personal website (Hooray)! This is a full-responsive, one-page scrolling, animation-based website. Three geometric shapes - triangles, circles, and rectangles – take the major responsibility of maintaining consistency of the website. I love clean design as well as snow mountains. The image of the peak of the snow mountain could be interpreted as the other form of triangles. The blue circle represents the sky over the mountain, which soon becomes a yellow sun when scrolling down. Those nested rectangles symbolize the comfort zones in my life. In order to reach the peak, stepping out the comfort zones is necessary. However, instead, if you can expand your comfort zones, which means you are open to more challenges and situations, the range of your comfort zones can determine how far you can go in your life. That is what I am striving for.  
         </p>
+        <p>The original photo of the snow mountain:</p>
+        <img src="img/full/design-05-2.jpg" alt="Personal Website">
+        <h4></h4>
+        <img src="img/full/design-05-gif.gif" alt="Personal Website">
+        <p class="tempaltes-credit">Flat Devices Templates by <a href="https://dribbble.com/bitmap9" target="_blank">Panagiotis Efthymiou</a></p>
         <h4></h4>
         <button data-remodal-action="cancel" class="remodal-cancel">Close</button>
        </div><!-- modal-05 -->
