--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -86,7 +86,7 @@
 
           <div class="blue-circle-container">
              <svg id="blue-circle">
-              <circle x="0" y="0" cx="148" cy="148" r="148" class="blue-circle"/>
+              <circle x="0" y="0" cx="148" cy="148" r="148" class="blue-circle mix-blend-mode"/>
              </svg>
           </div><!-- /blue-circle -->
 
@@ -172,9 +172,7 @@
                   <h1>About Me</h1>
               </div><!-- /intro-title -->
               <div class="intro-text">
-                Dispatched entreaties boisterous say why stimulated. Certain forbade picture now prevent carried she get see sitting. Up twenty limits as months. Inhabit so perhaps of in to certain. Sex excuse chatty was seemed warmth. Nay add far few immediate sweetness earnestly dejection. 
-
-                Why end might ask civil again spoil. She dinner she our horses depend. Remember at children by reserved to vicinity. In affronting unreserved delightful simplicity ye. Law own advantage furniture continual sweetness bed agreeable perpetual. Oh song well four only head busy it. Afford son she had lively living. Tastes lovers myself too formal season our valley boy. Lived it their their walls might to by young. 
+                Hi, I am Philina (/fə’lina/), a photographer, a web/graphic designer, a theatre lover, and a cat person. Snow mountains, starry nights and aurora are my most cherished landscapes on the earth. I love clean design, and desire a simple life. 
                </div><!-- intro-text -->
             </div><!-- /intro -->          
           </div><!-- /row -->    
