--- a/pw-04/index.html
+++ b/pw-04/index.html
@@ -60,11 +60,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
    
+
+<!-- 
 <div class="preloader" id="preloader">
     <div class="item">
       <img src="img/loading.gif">
     </div>
 </div>
+ -->
+    <!-- /loader -->
+    <div id="loader-wrapper">
+      <div class="loader"></div><!-- loader -->
+    </div><!-- /loader-wrapper -->
 
 
 <div class="container">
@@ -153,7 +160,7 @@
         <li><a href="#home">HOME</a></li>
         <li><a href="#about-us">ABOUT ME</a></li>
         <li class="dropdown"><a href="#portfolio">PORTFOLIO<i class="fa fa-caret-down"></i>
-          <ul class="dropdown-content">
+          <ul class="dropdown-content flipInX">
             <li><a href="#design">Graphic/Web Design</a></li>
             <li><a href="#photography">Photography</a></li>
             <li><a href="#painting">Painting</a></li>
