--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
 	<!-- Scripts -->
 	
 	<script src="js/vendor/jquery-1.11.0.min.js"></script>
-
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<script src="js/vendor/jquery-ui-1.10.4.min.js" type="text/javascript"></script> <!-- jQuery -->
   <script src="js/vendor/jquery.nicescroll.js"></script> <!-- jQuery NiceScroll -->
 	<script src="js/vendor/jquery.sticky.js"></script> <!-- jQuery Stick Menu -->
