--- a/photo-journal/index.html
+++ b/photo-journal/index.html
@@ -139,7 +139,7 @@
                 </g>
                 
                 <g id="FBBtn" class="btn">
-                  <a xlink:href="http://www.facebook.com/sharer.php?u=http://lahmiro.github.io/camera-2/index.html" onclick="return popup('http://www.facebook.com/sharer.php?u=http://lahmiro.github.io/camera-2/index.html')">
+                  <a xlink:href="http://www.facebook.com/sharer.php?u=http://lahmiro.github.io/camera-2/index.html" onclick="return popup('http://www.facebook.com/sharer.php?u=http://lahmiro.github.io/camera-2/index.html')" target="_blank">
                     <path class="rotateFill" fill="none" stroke="#000000" stroke-miterlimit="10" d="M63.8,206.1c0.1,7-5.5,12.8-12.5,12.9c-7,0.1-12.8-5.5-12.9-12.5
                       c-0.1-7,5.5-12.8,12.5-12.9C57.9,193.5,63.7,199.1,63.8,206.1z"/>
                       <path class="rotateBtn" id="Facebook_3_" fill="none" stroke="#000000" stroke-miterlimit="10" d="M49.2,201.7c0,0.4,0,2.2,0,2.2h-1.6v2.7h1.6v8.1
@@ -150,7 +150,7 @@
                 </g>
 
                  <g id="TwitterBtn" class="btn">
-                  <a xlink:href="http://twitter.com/share?url=http://lahmiro.github.io/camera-2/index.html" onclick="return popup('http://twitter.com/share?url=http://lahmiro.github.io/camera-2/index.html')">
+                  <a xlink:href="http://twitter.com/share?url=http://lahmiro.github.io/camera-2/index.html" onclick="return popup('http://twitter.com/share?url=http://lahmiro.github.io/camera-2/index.html')" target="_blank">
                     <path class="rotateFill" fill="none" stroke="#000000" stroke-miterlimit="10" d="M63.8,241.2c0.1,7-5.5,12.8-12.5,12.9c-7,0.1-12.8-5.5-12.9-12.5
                       c-0.1-7,5.5-12.8,12.5-12.9C57.9,228.6,63.7,234.2,63.8,241.2z"/>
                     <path class="rotateBtn" id="Tumblr_2_" fill="none" stroke="#000000" stroke-miterlimit="10" d="M52,246.4c-0.3-0.1-0.5-0.4-0.6-0.6
@@ -341,7 +341,7 @@
       
   </div>  
   <!-- end of centerContainer -->
-  <footer class="footer"><div class="container-fluid">Copyright Xinyi Chen 2015</div></footer>
+  <footer class="footer"><div class="container-fluid">Copyright Philina Chen 2015</div></footer>
 </div>
 <!-- end of section01 -->
 
